Include and use a 3rd party font Fixes #28

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 /*
  * Fonts
  */
- 
+ @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+ :root {
+    font-family: "Nunito", sans-serif;
+ }
+
 /*
  * Logo styling
  */
@@ -17,6 +23,10 @@
 /*
  * Section title styling
  */
+.section-title {
+    font-family: "Questrial", sans-serif;
+}
+
    
 /*
  * List styling
