--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 h1, h2, h3, h4 {
     margin: 0 0 10px 0;
 }
-  
+
 /*
  * Main page title styling
  */
@@ -82,6 +82,7 @@ nav > ul > li > a:active {
  /* Birthday gift field */
 fieldset {
     border-radius: 20px;
+    padding: 20px;
 }
 
  fieldset fieldset {
