--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,13 @@ nav > ul > li {
 nav > ul > li > a:active {
     color: #f93fff;
  }
+
+ #attendance > ul {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+ }
  
 /*
  * Link styling
