Change section padding

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@
     background-color: antiquewhite;
  }
 
+ section {
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+ }
+
 /*
  * Logo styling
  */
