--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ h1, h2, h3, h4 {
     font-family: "Questrial", sans-serif;
     color: #670e6a;
     transition: color ease-in-out 0.2s;
+    text-decoration: underline dotted #670e6a;
 }
 
 .section-title:hover {
