--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ h1, h2, h3, h4 {
  #header-title {
     color: hsl(194, 49%, 41%);
     transition: color ease-in-out 0.2s;
+    text-align: center;
  }
 
  #header-title:hover {
