--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,14 @@ nav > ul > li > a:active {
     min-width: 300px;
     max-width: 300px;
  }
- 
+
+ #cat {
+    height: 75px;
+    width: auto;
+    position: relative;
+    left: 85vw;
+ }
+
 /*
  * Form styling
  */
