--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
  :root {
     font-family: "Nunito", sans-serif;
+    font-size: 100%;
  }
 
  body {
@@ -17,6 +18,10 @@
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
+ }
+
+ p {
+    font-size: 1rem;
  }
 
 /*
@@ -35,6 +40,22 @@
  */  
 h1, h2, h3, h4 {
     margin: 0 0 10px 0;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1rem;
 }
 
 /*
