Change logo position units

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@
     height: 75px;
     width: 75px;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 1vh;
+    left: 1vh;
  }
   
 /*
