Change logo height width units

--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@
  * Logo styling
  */
  #header-logo {
-    height: 75px;
-    width: 75px;
+    height: 0.78in;
+    width: 0.78in;
     position: absolute;
     top: 1vh;
     left: 1vh;
