--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ nav > ul > li > a:active {
  }
 
  #cat {
-    height: 75px;
+    height: 1.98cm;
     width: auto;
     position: relative;
     left: 85vw;
