--- a/styles.css
+++ b/styles.css
@@ -118,8 +118,26 @@ nav > ul > li > a:active {
 /*
  * Media styling
  */
+#media {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: end;
+}
+
+#media-1 {
+    grid-column: 1/1;
+}
+
 #media-1 > * {
     max-width: 300px;
+}
+
+#media-2 {
+    grid-column: 2/2;
+}
+
+#media-3 {
+    grid-column: 3/3;
 }
 
  /* Selects all elements in a li, except for first li */
