--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,18 @@ nav > ul > li > a:active {
     left: 85vw;
  }
 
+ #hi {
+    visibility: hidden;
+    height: 25px;
+    width: auto;
+ }
+
+ @media (max-width: 750px) {
+    #hi {
+        visibility: visible;
+    }
+ }
+
 /*
  * Form styling
  */
